Fix possible crash in VideoClipEngine

FIXED-IN: 2.4.2
BUG: 260635